Fix Project List gap

--- a/pages/home/style.css
+++ b/pages/home/style.css
@@ -230,7 +230,7 @@ body {
 }
 
 .project {
-  width: 300px;
+  width: 25vw;
   margin: 20px;
   padding: 15px;
   border: 1px solid #ccc;
